fix scrollbar issue for #90

--- a/css/subject_viewer.styl
+++ b/css/subject_viewer.styl
@@ -35,7 +35,7 @@
       left: 10px;
       z-index: 1;
       height: 42px;
-      overflow: scroll;
+      overflow-y: scroll;
       @media $classifier-vertical-stack-breakpoint
         width: 100%
         left: 0px;
